little cleanup, null ptr check